# Kaleidoscope

./: .gitignore  CMakeLists.txt  Makefile  README.md  ci.sh  compile_flags.txt  run_test.sh
.github/workflows/: cmake.yml
src/: CMakeLists.txt  ast.cpp  ast.h  lexer.h  main.cpp
test/: test_foo.cpp
